--- a/index.html
+++ b/index.html
@@ -121,74 +121,74 @@
                         <div class="row mt-5">
                             <div class="col-6">
 
-                                    <div class="col-2 d-flex rounded border boreder-3 w-100 ">
+                                <div class="col-2 d-flex rounded border boreder-3 w-100 h-25 mt-3">
+                                    <div>
+                                        <img class="h-100" src="/images/course/course-1.png" alt="">
+                                    </div>
+                                    <div class="ms-3 my-5 w-100" >
+                                        <h3 class="h5">Fundamental Of UI/UX Design</h3>
+                                        <p class="h6 text-muted">Some quick example text to build on the card title 
+                                            and make up the bulk of the card.</p>
+                                            <p class="text-primary fw-bold">Price : 20$</p>
+                                    </div>
+                                </div>
+                                    <div class="col-2 d-flex rounded border boreder-3 w-100 h-25 mt-3">
                                         <div>
-                                            <img src="/images/course/course-1.png" alt="">
+                                            <img class="h-100" src="/images/course/course-2.png" alt="">
                                         </div>
-                                        <div class="ms-3 my-5">
+                                        <div class="ms-3 my-5 w-100" >
                                             <h3 class="h5">Fundamental Of UI/UX Design</h3>
-                                            <p class="h6">Some quick example text to build on the card title 
+                                            <p class="h6 text-muted">Some quick example text to build on the card title 
                                                 and make up the bulk of the card.</p>
-                                                <p>Price : 20$</p>
+                                                <p class="text-primary fw-bold">Price : 20$</p>
                                         </div>
                                     </div>
-                                    <div class="col-2 d-flex rounded border boreder-3 w-100 ">
+                                    <div class="col-2 d-flex rounded border boreder-3 w-100 h-25 mt-3">
                                         <div>
-                                            <img src="/images/course/course-2.png" alt="">
+                                            <img class="h-100" src="/images/course/course-3.png" alt="">
                                         </div>
-                                        <div class="ms-3 my-5">
+                                        <div class="ms-3 my-5 w-100" >
                                             <h3 class="h5">Fundamental Of UI/UX Design</h3>
-                                            <p class="h6">Some quick example text to build on the card title 
+                                            <p class="h6 text-muted">Some quick example text to build on the card title 
                                                 and make up the bulk of the card.</p>
-                                                <p>Price : 20$</p>
-                                        </div>
-                                    </div>
-                                    <div class="col-2 d-flex rounded border boreder-3 w-100 ">
-                                        <div>
-                                            <img src="/images/course/course-3.png" alt="">
-                                        </div>
-                                        <div class="ms-3 my-5">
-                                            <h3 class="h5">Fundamental Of UI/UX Design</h3>
-                                            <p class="h6">Some quick example text to build on the card title 
-                                                and make up the bulk of the card.</p>
-                                                <p>Price : 20$</p>
+                                                <p class="text-primary fw-bold">Price : 20$</p>
                                         </div>
                                     </div>
 
 
                             </div>
                             <div class="col-6">
-                                <div class="col-2 d-flex rounded border boreder-3 w-100 ">
+                                 <div class="col-2 d-flex rounded border boreder-3 w-100 h-25 mt-3">
                                     <div>
-                                        <img src="/images/course/course-4.png" alt="">
+                                        <img class="h-100" src="/images/course/course-4.png" alt="">
                                     </div>
-                                    <div class="ms-3 my-5">
+                                    <div class="ms-3 my-5 w-100" >
                                         <h3 class="h5">Fundamental Of UI/UX Design</h3>
-                                        <p class="h6">Some quick example text to build on the card title 
+                                        <p class="h6 text-muted">Some quick example text to build on the card title 
                                             and make up the bulk of the card.</p>
-                                            <p>Price : 20$</p>
+                                            <p class="text-primary fw-bold">Price : 20$</p>
                                     </div>
                                 </div>
-                                <div class="col-2 d-flex rounded border boreder-3 w-100 ">
+                                <div class="col-2 d-flex rounded border boreder-3 w-100 h-25 mt-3">
                                     <div>
-                                        <img src="/images/course/course-5.png" alt="">
+                                        <img class="h-100" src="/images/course/course-5.png" alt="">
                                     </div>
-                                    <div class="ms-3 my-5">
+                                    <div class="ms-3 my-5 w-100" >
                                         <h3 class="h5">Fundamental Of UI/UX Design</h3>
-                                        <p class="h6">Some quick example text to build on the card title 
+                                        <p class="h6 text-muted">Some quick example text to build on the card title 
                                             and make up the bulk of the card.</p>
-                                            <p>Price : 20$</p>
+                                            <p class="text-primary fw-bold">Price : 20$</p>
                                     </div>
                                 </div>
-                                <div class="col-2 d-flex rounded border boreder-3 w-100 ">
+                                <div class="col-2 d-flex rounded border boreder-3 w-100 h-25 mt-3">
                                     <div>
-                                        <img src="/images/course/course-6.png" alt="">
+                                        <img class="h-100" src="/images/course/course-6.png" alt="">
                                     </div>
-                                    <div class="ms-3 my-5">
+                                    <div class="ms-3 my-5 w-100" >
                                         <h3 class="h5">Fundamental Of UI/UX Design</h3>
-                                        <p class="h6">Some quick example text to build on the card title 
+                                        <p class="h6 text-muted">Some quick example text to build on the card title 
                                             and make up the bulk of the card.</p>
-                                            <p>Price : 20$</p>
+                                            <p class="text-primary fw-bold">Price : 20$</p>
                                     </div>
                                 </div>
                         </div>
