--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                </div>
                <div class="carousel-inner">
                   <div class="carousel-item active">
-                     <img src="/images/cover/cover-1.png" class="w-100 img-fluid" alt="...">
+                     <img src="./images/cover/cover-1.png" class="w-100 img-fluid" alt="...">
                      <div class="carousel-caption d-md-block">
                         <h1 class="h2 display-3 text-primary fw-bold mb-5">Get Started Digital Learning</h1>
                         <p class="fw-semibold h6 text-secondary mb-5">It is a long established fact that a reader will be distracted by the readable 
@@ -63,7 +63,7 @@
                      </div>
                   </div>
                   <div class="carousel-item active">
-                     <img src="/images/cover/cover-2.jpg" class="w-100 h-25 img-fluid" alt="...">
+                     <img src="./images/cover/cover-2.jpg" class="w-100 h-25 img-fluid" alt="...">
                      <div class="carousel-caption d-md-block">
                         <h1 class="h2 display-3 text-primary fw-bold mb-5">Get Started Digital Learning</h1>
                         <p class="fw-semibold h6 text-secondary mb-5">It is a long established fact that a reader will be distracted by the readable 
@@ -73,7 +73,7 @@
                      </div>
                   </div>
                   <div class="carousel-item">
-                     <img src="/images/cover/cover-3.jpg" class=" w-100 img-fluid" alt="...">
+                     <img src="./images/cover/cover-3.jpg" class=" w-100 img-fluid" alt="...">
                      <div class="carousel-caption d-md-block">
                         <h1 class="h2 display-3 text-primary fw-bold mb-5">
                         Get Started Digital Learning</h5>
@@ -105,7 +105,7 @@
                <div class="col-6  ">
                   <div class="col-2 col-md-12 d-flex rounded border boreder-3 w-100 h-25 mt-3">
                      <div>
-                        <img class="h-100" src="/images/course/course-1.png" alt="">
+                        <img class="h-100" src="./images/course/course-1.png" alt="">
                      </div>
                      <div class="ms-3 my-5 w-100" >
                         <h3 class="h5">Fundamental Of UI/UX Design</h3>
@@ -117,7 +117,7 @@
                   </div>
                   <div class="col-2 d-flex rounded border boreder-3 w-100 h-25 mt-3">
                      <div>
-                        <img class="h-100" src="/images/course/course-2.png" alt="">
+                        <img class="h-100" src="./images/course/course-2.png" alt="">
                      </div>
                      <div class="ms-3 my-5 w-100" >
                         <h3 class="h5">Fundamental Of UI/UX Design</h3>
@@ -129,7 +129,7 @@
                   </div>
                   <div class="col-2 d-flex rounded border boreder-3 w-100 h-25 mt-3">
                      <div>
-                        <img class="h-100" src="/images/course/course-3.png" alt="">
+                        <img class="h-100" src="./images/course/course-3.png" alt="">
                      </div>
                      <div class="ms-3 my-5 w-100" >
                         <h3 class="h5">Fundamental Of UI/UX Design</h3>
@@ -143,7 +143,7 @@
                <div class="col-6">
                   <div class="col-2 d-flex rounded border boreder-3 w-100 h-25 mt-3">
                      <div>
-                        <img class="h-100" src="/images/course/course-4.png" alt="">
+                        <img class="h-100" src="./images/course/course-4.png" alt="">
                      </div>
                      <div class="ms-3 my-5 w-100" >
                         <h3 class="h5">Fundamental Of UI/UX Design</h3>
@@ -155,7 +155,7 @@
                   </div>
                   <div class="col-2 d-flex rounded border boreder-3 w-100 h-25 mt-3">
                      <div>
-                        <img class="h-100" src="/images/course/course-5.png" alt="">
+                        <img class="h-100" src="./images/course/course-5.png" alt="">
                      </div>
                      <div class="ms-3 my-5 w-100" >
                         <h3 class="h5">Fundamental Of UI/UX Design</h3>
@@ -167,7 +167,7 @@
                   </div>
                   <div class="col-2 d-flex rounded border boreder-3 w-100 h-25  mt-3">
                      <div>
-                        <img class="h-100" src="/images/course/course-6.png" alt="">
+                        <img class="h-100" src="./images/course/course-6.png" alt="">
                      </div>
                      <div class="ms-3 my-5 w-100" >
                         <h3 class="h5">Fundamental Of UI/UX Design</h3>
@@ -188,7 +188,7 @@
          <section class="container mb-5 border-0 ps-0 shadow-lg bg-body rounded">
             <div class="row d-flex justify-content-center align-items-center">
                <div class="col-6">
-                  <img class="img-fluid h-50 w-100" src="/images/working.png" alt="">
+                  <img class="img-fluid h-50 w-100" src="./images/working.png" alt="">
                </div>
                <div class="col-6">
                   <h1 class="fw-bold m-3">Explore The elearning Institute</h1>
@@ -270,28 +270,28 @@
                 </div>
                     <div class="card-group ps-0 w-100 h-100">
                         <div class="card border-0 ms-3">
-                          <img  src="/images/student/student-1.png" class="card-img-top img-fluid" alt="...">
+                          <img  src="./images/student/student-1.png" class="card-img-top img-fluid" alt="...">
                           <div class="card-body border">
                             <h5 class="card-title">Awlad Hossain</h5>
                             <p class="card-text">UIUX Designer</p>
                           </div>
                         </div>
                         <div class="card border-0 ms-3">
-                          <img  src="/images/student/student-2.png" class="card-img-top img-fluid" alt="...">
+                          <img  src="./images/student/student-2.png" class="card-img-top img-fluid" alt="...">
                           <div class="card-body border">
                             <h5 class="card-title">Jannatul Islam</h5>
                             <p class="card-text">Motion Design</p>
                           </div>
                         </div>
                         <div class="card border-0 ms-3">
-                          <img  src="/images/student/student-3.png" class="card-img-top img-fluid" alt="...">
+                          <img  src="./images/student/student-3.png" class="card-img-top img-fluid" alt="...">
                           <div class="card-body border">
                             <h5 class="card-title">Imran Hossain</h5>
                             <p class="card-text">Graphic Designer</p>
                           </div>
                         </div>
                         <div class="card border-0 ms-3">
-                          <img  src="/images/student/student-4.png" class="card-img-top img-fluid" alt="...">
+                          <img  src="/.images/student/student-4.png" class="card-img-top img-fluid" alt="...">
                           <div class="card-body border">
                             <h5 class="card-title">Nishi Akter</h5>
                             <p class="card-text">Web Developer</p>
@@ -378,12 +378,12 @@
             <section class="container">
                         <h1 class="text-center mb-5">Trusted by over 800+ companies</h1>
                         <div class="d-flex justify-content-center mb-5 p-2">
-                            <img src="/images/company/company-1.png" alt="">
-                            <img src="/images/company/company-2.png" alt="">
-                            <img src="/images/company/company-3.png" alt="">
-                            <img src="/images/company/company-4.png" alt="">
-                            <img src="/images/company/company-5.png" alt="">
-                            <img src="/images/company/company-6.png" alt="">
+                            <img src="./images/company/company-1.png" alt="">
+                            <img src="./images/company/company-2.png" alt="">
+                            <img src="./images/company/company-3.png" alt="">
+                            <img src="./images/company/company-4.png" alt="">
+                            <img src="./images/company/company-5.png" alt="">
+                            <img src="./images/company/company-6.png" alt="">
                         </div>
             </section>
 
