--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                           </div>
                         </div>
                         <div class="card border-0 ms-3">
-                          <img  src="/.images/student/student-4.png" class="card-img-top img-fluid" alt="...">
+                          <img  src="./images/student/student-4.png" class="card-img-top img-fluid" alt="...">
                           <div class="card-body border">
                             <h5 class="card-title">Nishi Akter</h5>
                             <p class="card-text">Web Developer</p>
@@ -377,13 +377,13 @@
 
             <section class="container">
                         <h1 class="text-center mb-5">Trusted by over 800+ companies</h1>
-                        <div class="d-flex justify-content-center mb-5 p-2">
-                            <img src="./images/company/company-1.png" alt="">
-                            <img src="./images/company/company-2.png" alt="">
-                            <img src="./images/company/company-3.png" alt="">
-                            <img src="./images/company/company-4.png" alt="">
-                            <img src="./images/company/company-5.png" alt="">
-                            <img src="./images/company/company-6.png" alt="">
+                        <div class="d-flex justify-content-center mb-5 ">
+                            <img class="img-fluid" src="./images/company/company-1.png" alt="">
+                            <img class="img-fluid ps-2" src="./images/company/company-2.png" alt="">
+                            <img class="img-fluid ps-2" src="./images/company/company-3.png" alt="">
+                            <img class="img-fluid ps-2" src="./images/company/company-4.png" alt="">
+                            <img class="img-fluid ps-2" src="./images/company/company-5.png" alt="">
+                            <img class="img-fluid ps-2" src="./images/company/company-6.png" alt="">
                         </div>
             </section>
 
