--- a/index.html
+++ b/index.html
@@ -3,36 +3,39 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Wllcome To Our Digital Learning Website</title>
+      <script src="https://kit.fontawesome.com/cb27d78680.js" crossorigin="anonymous"></script>
+      <link rel="shortcut icon" href="./images/logo.webp" type="image/x-icon">
+      <title>SCS IT Firm</title>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
    </head>
    <body>
       <!-- Navigation bar style Start -->
       <nav class="navbar navbar-expand-lg mt-2 mb-0">
          <div class="container">
-            <a class="navbar-brand h1 fw-bold display-2" href="#">Pro Edu</a>
+            <h1 class="h1 fw-bold display-4 text-muted">SCS IT Firm</h1>
+            <!-- <a class="navbar-brand h1 fw-bold display-4 " href="#">SCS IT Firm</a> -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-               <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-auto ps-3">
+               <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-auto">
                   <li class="nav-item">
-                     <a class="nav-link" aria-current="page" href="#">Home</a>
+                     <a class="nav-link ms-5" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="#">Course</a>
+                     <a class="nav-link ms-5" href="#">Course</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="#">Deals</a>
+                     <a class="nav-link ms-5" href="#">Deals</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="#">Success</a>
+                     <a class="nav-link ms-5" href="#">Success</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="#">About</a>
+                     <a class="nav-link ms-5" href="#">About</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="#">Register</a>
+                     <a class="nav-link ms-5" href="#">Register</a>
                   </li>
                </ul>
                <form class="d-flex" role="search">
@@ -44,7 +47,7 @@
       <!-- Navigation bar style  End -->
       <!-- Carousel Part Start  -->
       <header>
-         <section class="container mb-5 mt-0">
+         <section class="container mb-5 mt-0 ">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
                <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -52,7 +55,7 @@
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
                </div>
                <div class="carousel-inner">
-                  <div class="carousel-item active">
+                  <div class="carousel-item active ">
                      <img src="./images/cover/cover-1.png" class="w-100 img-fluid" alt="...">
                      <div class="carousel-caption d-md-block">
                         <h1 class="h2 display-3 text-primary fw-bold mb-5">Get Started Digital Learning</h1>
@@ -329,8 +332,8 @@
                           </h2>
                           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                              <strong>Grid :</strong> Grid Layout, is a two-dimensional grid-based layout system with rows and columns, making it easier to design web pages without having to use floats and positioning. Like tables, grid layout allow us to align elements into columns and rows.</code> <br>
-                              <strong>Flex :</strong>CSS Flexbox offers a one-dimensional layout. It is helpful in allocating and aligning the space among items in a container (made of grids). It works with all kinds of display devices and screen sizes.</code>
+                              <strong><u>Grid</u> :</strong> Grid Layout, is a two-dimensional grid-based layout system with rows and columns, making it easier to design web pages without having to use floats and positioning. Like tables, grid layout allow us to align elements into columns and rows.</code> <br>
+                              <strong><u>Flex</u> :</strong>CSS Flexbox offers a one-dimensional layout. It is helpful in allocating and aligning the space among items in a container (made of grids). It works with all kinds of display devices and screen sizes.</code>
                             </div>
                           </div>
                         </div>
@@ -342,8 +345,8 @@
                           </h2>
                           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                             <div class="accordion-body text-secondary">
-                              <strong>Bootstrap : Bootstrap comes with a set of pre-styled responsive, mobile-first components that possess a definite UI kit.Sites created using Bootstrap follow the generic pattern that makes them look identical. <br>
-                              Tailwind Css : Tailwind offers predesigned widgets to build a site from scratch with fast UI development.Tailwind CSS uses a set of utility classes to create a neat UI with more flexibility and uniqueness.
+                              <strong><u>Bootstrap</u> : Bootstrap comes with a set of pre-styled responsive, mobile-first components that possess a definite UI kit.Sites created using Bootstrap follow the generic pattern that makes them look identical. <br>
+                              <u>Tailwind</u> : Tailwind offers predesigned widgets to build a site from scratch with fast UI development.Tailwind CSS uses a set of utility classes to create a neat UI with more flexibility and uniqueness.
                             </div>
                           </div>
                         </div>
@@ -355,7 +358,7 @@
                           </h2>
                           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                             <div class="accordion-body text-muted">
-                              <strong>Flexbox: The Flexible Box Module, usually referred to as flexbox, was designed as a one-dimensional layout model, and as a method that could offer space distribution between items in an interface and powerful alignment capabilities. This article gives an outline of the main features of flexbox, which we will be exploring in more detail in the rest of these guides.
+                              <strong><u>Flexbox</u>: The Flexible Box Module, usually referred to as flexbox, was designed as a one-dimensional layout model, and as a method that could offer space distribution between items in an interface and powerful alignment capabilities. This article gives an outline of the main features of flexbox, which we will be exploring in more detail in the rest of these guides.
                             </div>
                           </div>
                         </div>
@@ -366,8 +369,8 @@
                             </button>
                           </h2>
                           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                            <div class="accordion-body">
-                              <strong>Symantec Element :HTML was originally created as a markup language to describe documents on the early internet. As the internet grew and was adopted by more people, its needs changed.</code>, though the transition does limit overflow.Elements such as <header></header> ,<footer></footer> and <article></article> are all considered semantic because they accurately describe the purpose of the element and
+                            <div class="accordion-body text-muted">
+                              <strong><u>Symantec Element</u> :HTML was originally created as a markup language to describe documents on the early internet. As the internet grew and was adopted by more people, its needs changed.</code>, though the transition does limit overflow.All considered semantic because they accurately describe the purpose of the element and
                             </div>
                           </div>
                         </div>
@@ -375,17 +378,33 @@
                 </div>
             </section>
 
-            <section class="container">
+            <section class="container-fluid">
                         <h1 class="text-center mb-5">Trusted by over 800+ companies</h1>
-                        <div class="d-flex justify-content-center mb-5 ">
-                            <img class="img-fluid" src="./images/company/company-1.png" alt="">
-                            <img class="img-fluid ps-2" src="./images/company/company-2.png" alt="">
-                            <img class="img-fluid ps-2" src="./images/company/company-3.png" alt="">
-                            <img class="img-fluid ps-2" src="./images/company/company-4.png" alt="">
-                            <img class="img-fluid ps-2" src="./images/company/company-5.png" alt="">
-                            <img class="img-fluid ps-2" src="./images/company/company-6.png" alt="">
+                        <div class="d-flex  mb-5 justify-content-around">
+                            <img class="img-fluid  ps-3 py-1" src="./images/company/company-1.png" alt="">
+                            <img class="img-fluid ps-3 py-1" src="./images/company/company-2.png" alt="">
+                            <img class="img-fluid ps-3 py-1" src="./images/company/company-3.png" alt="">
+                            <img class="img-fluid ps-3 py-1" src="./images/company/company-4.png" alt="">
+                            <img class="img-fluid ps-3 py-1" src="./images/company/company-5.png" alt="">
+                            <img class="img-fluid ps-3 py-1" src="./images/company/company-6.png" alt="">
                         </div>
             </section>
+
+            <footer class="bg-dark py-3">
+                    
+                    <div class=" text-center text-white mt-5 fw-semibold">
+                        <h1 class="pb-4 fw-bold">SCS IT Firm</h1>
+                        <p>Sector-06, House Building,</p>
+                        <p>Uttara Dhaka-1230</p>
+                        <p>Privacy Policy | Tearms of use</p>
+                    </div>  
+                <div class="text-center h3 mb-5">
+                    <a href="https://www.facebook.com/kamruzzaman.joy.63/" target="_blank"><i class="fa-brands fa-facebook text-decoration-none"></i></a>
+                    <a href="https://twitter.com/?lang=en" target="_blank"><i class="fa-brands fa-twitter ms-3 text-decoration-none" ></i></a>
+                    <a href="https://www.youtube.com/"target="_blank"><i class="fa-brands fa-youtube ms-3 text-decoration-none"></i></a>
+                    <a href="https://www.google.com/" target="_blank"><i class="fa-brands fa-google ms-3 text-decoration-none"></i></a>
+                </div>                     
+            </footer>
 
       </main>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
