--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                         content of a page when looking at its layout.</p>
                 </div>
 
-                <div>
+                <div class="w-75 mx-auto">
                     <div class="accordion" id="accordionExample">
                         <div class="accordion-item mb-5">
                           <h2 class="accordion-header" id="headingOne">
@@ -378,10 +378,10 @@
                 </div>
             </section>
 
-            <section class="container-fluid">
-                        <h1 class="text-center mb-5">Trusted by over 800+ companies</h1>
-                        <div class="d-flex  mb-5 justify-content-around">
-                            <img class="img-fluid  ps-3 py-1" src="./images/company/company-1.png" alt="">
+            <section class="container-fluid p-5">
+                        <h1 class="text-center fw-bold mb-5">Trusted by over 800+ companies</h1>
+                        <div class="d-flex gx-4  mb-5 justify-content-around ">
+                            <img class="img-fluid ps-3 py-1 " src="./images/company/company-1.png" alt="">
                             <img class="img-fluid ps-3 py-1" src="./images/company/company-2.png" alt="">
                             <img class="img-fluid ps-3 py-1" src="./images/company/company-3.png" alt="">
                             <img class="img-fluid ps-3 py-1" src="./images/company/company-4.png" alt="">
