added some code after modify

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                   <div class="carousel-item active rounded ">
                      <img src="./images/cover/cover-1.png" class="w-100 img-fluid img-carousel-info" alt="...">
                      <div class="carousel-caption d-md-block">
-                        <h1 class="h2 display-3 text-primary fw-bold mb-5 p-4">Get Started Digital Learning</h1>
-                        <p class="fw-semibold h6 text-ifo mb-5">Effective Enterprise Training is the cornerstone of improving business performance.  
+                        <h1 class="h2 display-3 text-secondary fw-bold mb-5 p-4">Get Started Digital Learning</h1>
+                        <p class="fw-semibold h6 text-primary mb-5 ">Effective Enterprise Training is the cornerstone of improving business performance.  
                            <br>We are delighted that KloudLearn has made this a reality for our customers.
                         </p>
                         <div class="btn btn-info mt-0 w-25 p-3 text-white fw-bold mb-5">Get Started</div>
@@ -69,8 +69,8 @@
                   <div class="carousel-item active rounded">
                      <img src="./images/cover/cover-2.jpg" class="w-100 img-fluid img-carousel-info " alt="...">
                      <div class="carousel-caption d-md-block">
-                        <h1 class="h2 display-3 text-primary fw-bold mb-5">Get Started Digital Learning</h1>
-                        <p class="fw-semibold h6 text-secondary mb-5">Effective Enterprise Training is the cornerstone of improving business performance. 
+                        <h1 class="h2 display-3 text-secondary fw-bold mb-5">Get Started Digital Learning</h1>
+                        <p class="fw-semibold h6 text-primary mb-5">Effective Enterprise Training is the cornerstone of improving business performance. 
                            <br> We are delighted that KloudLearn has made this a reality for our customers.
                         </p>
                         <div class="btn btn-info mt-0 w-25 p-3 text-white fw-bold mb-5">Get Started</div>
@@ -79,9 +79,9 @@
                   <div class="carousel-item rounded">
                      <img src="./images/cover/cover-3.jpg" class=" w-100 img-fluid img-carousel-info" alt="...">
                      <div class="carousel-caption d-md-block">
-                        <h1 class="h2 display-3 text-primary fw-bold mb-5">
+                        <h1 class="h2 display-3 text-secondary fw-bold mb-5">
                         Get Started Digital Learning</h5>
-                        <p class="fw-semibold h6 text-secondary mb-5">Effective Enterprise Training is the cornerstone of improving business performance.
+                        <p class="fw-semibold h6 text-primary mb-5">Effective Enterprise Training is the cornerstone of improving business performance.
                            <br> We are delighted that KloudLearn has made this a reality for our customers.
                         </p>
                         <div class="btn btn-info mt-0 w-25 p-3 text-white fw-bold mb-5 sm-w-100">Get Started</div>
@@ -108,10 +108,10 @@
                <br>.
             </p>
             <div class="row mt-5">
-               <div class="col-6  ">
-                  <div class="col-2 col-md-12 d-flex rounded border boreder-3 w-100 h-25 mt-3">
+               <div class="col-6 col-row-md-6 ">
+                  <div class="col-2  d-flex rounded border boreder-3 w-100 h-25 mt-3">
                      <div>
-                        <img class="h-100" src="./images/course/course-1.png" alt="">
+                        <img class="col-row-md-6 h-100" src="./images/course/course-1.png" alt="">
                      </div>
                      <div class="ms-3 my-5 w-100" >
                         <h3 class="h5">Fundamental Of UI/UX Design</h3>
