added frequency question margin part

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
             </div>
             <div class="mx-auto w-75">
                <div class="accordion" id="accordionExample">
-                  <div class="accordion-item mb-5">
+                  <div class="accordion-item">
                      <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                            <h5> What is the different between flex box and grid box.....?</h5>
@@ -319,40 +319,58 @@
                         </div>
                      </div>
                   </div>
-                  <div class="accordion-item">
-                     <h2 class="accordion-header" id="headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                           <h5>What is the different between bootstrap and tailwind css....?</h5>
-                        </button>
-                     </h2>
-                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                        <div class="accordion-body text-secondary">
-                           <strong><u>Bootstrap</u> : Bootstrap comes with a set of pre-styled responsive, mobile-first components that possess a definite UI kit.Sites created using Bootstrap follow the generic pattern that makes them look identical. <br>
-                           <u>Tailwind</u> : Tailwind offers predesigned widgets to build a site from scratch with fast UI development.Tailwind CSS uses a set of utility classes to create a neat UI with more flexibility and uniqueness.
+                 <div class="mt-3">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingTwo">
+                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                              <h5>What is the different between bootstrap and tailwind css....?</h5>
+                           </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                           <div class="accordion-body text-secondary">
+                              <strong><u>Bootstrap</u> : Bootstrap comes with a set of pre-styled responsive, mobile-first components that possess a definite UI kit.Sites created using Bootstrap follow the generic pattern that makes them look identical. <br>
+                              <u>Tailwind</u> : Tailwind offers predesigned widgets to build a site from scratch with fast UI development.Tailwind CSS uses a set of utility classes to create a neat UI with more flexibility and uniqueness.
+                           </div>
+                        </div>
+                     </div>
+                 </div>
+                  <div class="mt-3">
+                    <div class="accordion-item rounded">
+                        <h2 class="accordion-header" id="headingThree">
+                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                              <h5> What Is Css Flexbox.....?</h5>
+                           </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                           <div class="accordion-body text-muted">
+                              <strong><u>Flexbox</u>: The Flexible Box Module, usually referred to as flexbox, was designed as a one-dimensional layout model, and as a method that could offer space distribution between items in an interface and powerful alignment capabilities. This article gives an outline of the main features of flexbox, which we will be exploring in more detail in the rest of these guides.
+                           </div>
                         </div>
                      </div>
                   </div>
-                  <div class="accordion-item rounded">
-                     <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                           <h5> What Is Css Flexbox.....?</h5>
-                        </button>
-                     </h2>
-                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                        <div class="accordion-body text-muted">
-                           <strong><u>Flexbox</u>: The Flexible Box Module, usually referred to as flexbox, was designed as a one-dimensional layout model, and as a method that could offer space distribution between items in an interface and powerful alignment capabilities. This article gives an outline of the main features of flexbox, which we will be exploring in more detail in the rest of these guides.
-                        </div>
-                     </div>
-                  </div>
-                  <div class="accordion-item">
-                     <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                           <h5>What Is Symantec.....?</h5>
-                        </button>
-                     </h2>
-                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                        <div class="accordion-body text-muted">
-                           <strong><u>Symantec Element</u> :HTML was originally created as a markup language to describe documents on the early internet. As the internet grew and was adopted by more people, its needs changed.</code>, though the transition does limit overflow.All considered semantic because they accurately describe the purpose of the element and
+                  <div class="mt-3">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingThree">
+                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                              <h5>What Is Symantec.....?</h5>
+                           </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                           <div class="accordion-body text-muted">
+                              <strong><u>Symantec Element</u> :HTML was originally created as a markup language to describe documents on the early internet. As the internet grew and was adopted by more people, its needs changed.</code>, though the transition does limit overflow.All considered semantic because they accurately describe the purpose of the element
+                               <aside>
+                               <details>
+                               <figcaption>
+                               <figure>
+                               <footer>
+                               <header>
+                               <main>
+                               <mark>
+                               <nav>
+                               <section>
+                               <summary>
+                               <time>  
+                           </div>
                         </div>
                      </div>
                   </div>
