--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <br>.
          </p>
          <div class="row">
-            <div class="col-lg-6 col-md-12 g-2">
+            <div class="col-lg-6 col-md-12 g-2 ps-0 border border-1 rounded">
                <div class="row">
                   <div class="col-md-4">
                      <img class="h-100 w-100" src="./images/course/course-1.png" alt="">
@@ -133,7 +133,7 @@
                   </div>
                </div>
             </div>
-            <div class="col-lg-6 col-md-12 g-2">
+            <div class="col-lg-6 col-md-12 g-2 ps-0 border border-1 rounded">
                <div class="row">
                   <div class="col-md-4">
                      <img class="h-100 w-100" src="./images/course/course-2.png" alt="">
@@ -146,7 +146,7 @@
                   </div>
                </div>
             </div>
-            <div class="col-lg-6 col-md-12 g-2">
+            <div class="col-lg-6 col-md-12 g-2 ps-0 border border-1 rounded">
                <div class="row">
                   <div class="col-md-4">
                      <img class="h-100 w-100" src="./images/course/course-3.png" alt="">
@@ -159,7 +159,7 @@
                   </div>
                </div>
             </div>
-            <div class="col-lg-6 col-md-12 g-2">
+            <div class="col-lg-6 col-md-12 g-2 ps-0 border border-1 rounded">
                <div class="row">
                   <div class="col-md-4 ">
                      <img class="h-100 w-100" src="./images/course/course-4.png" alt="">
@@ -172,7 +172,7 @@
                   </div>
                </div>
             </div>
-            <div class="col-lg-6 col-md-12 g-2">
+            <div class="col-lg-6 col-md-12 g-2 ps-0 border border-1 rounded">
                <div class="row">
                   <div class="col-md-4">
                      <img class="h-100 w-100" src="./images/course/course-5.png" alt="">
@@ -185,7 +185,7 @@
                   </div>
                </div>
             </div>
-            <div class="col-lg-6 col-md-12 g-2">
+            <div class="col-lg-6 col-md-12 g-2 ps-0 border border-1 rounded">
                <div class="row">
                   <div class="col-md-4">
                      <img class="h-100 w-100" src="./images/course/course-6.png" alt="">
