--- a/index.html
+++ b/index.html
@@ -56,55 +56,51 @@
 <!-- Carousel Or Header Part Start  -->
          <header>
             <div class="container mb-5 mt-0" data-bs-ride="carousel">
-               <div class="carousel-inner">
-                  <div class="carousel-item active">
+               <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  </div>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active img-carousel-info">
                      <img src="./images/cover/cover-1.png" class="w-100 img-fluid bgimage" alt="...">
-                     <div class="container">
-                        <div class="carousel-caption">
-                           <h1>Get Started Digital Learning </h1>
-                           <p>It is a long established fact that a reader will
-                              be distracted by the readable content of a 
-                              page when looking at its layout
-                           </p>
-                           <p><a class="btn btn-lg btn-primary" href="#">Get Started</a></p>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="carousel-item">
+                      <div class="carousel-caption d-md-block">
+                        <h1 class="upper display-4">Get Started Digital Learning </h1>
+                              <p class="upper">Search Ai Online Course, Top Information From Trusted Internet Sources. Ai Online Course, Get Expert Advice and Curated Content
+                              </p>
+                              <p class="upper"><a class="btn btn-lg btn-primary" href="#">Get Started</a></p>
+   
+                      </div>
+                    </div>
+                    <div class="carousel-item img-carousel-info">
                      <img src="./images/cover/cover-2.jpg" class="w-100 img-fluid bgimage" alt="...">
-                     <div class="container">
-                        <div class="carousel-caption">
-                           <h1>Get Started Digital Learning </h1>
-                           <p>It is a long established fact that a reader will 
-                              be distracted by the readable content of a 
-                              page when looking at its layout
-                           </p>
-                           <p><a class="btn btn-lg btn-primary" href="#">Get Started</a></p>
-                        </div>
-                     </div>
+                      <div class="carousel-caption d-md-block">
+                        <h1 class="upper display-4">Get Started Digital Learning </h1>
+                              <p class="upper">Search Ai Online Course, Top Information From Trusted Internet Sources. Ai Online Course, Get Expert Advice and Curated Content
+                              </p>
+                              <p class="upper"><a class="btn btn-lg btn-primary" href="#">Get Started</a></p>
+                      </div>
+                    </div>
+                    <div class="carousel-item img-carousel-info">
+                     <img src="./images/cover/cover-3.jpg" class="w-100 img-fluid bgimage" alt="...">
+                      <div class="carousel-caption d-md-block">
+                        <h1 class="upper display-4">Get Started Digital Learning </h1>
+                              <p class="upper">Search Ai Online Course, Top Information From Trusted Internet Sources. Ai Online Course, Get Expert Advice and Curated Content
+                              </p>
+                              <p class="upper"><a class="btn btn-lg btn-primary" href="#">Get Started</a></p>
+                      </div>
+                    </div>
                   </div>
-                  <div class="carousel-item">
-                     <img src="./images/cover/cover-3.jpg" class=" w-100 img-fluid bgimage" alt="...">
-                     <div class="container">
-                        <div class="carousel-caption">
-                           <h1>Get Started Digital Learning </h1>
-                           <p>It is a long established fact that a reader will 
-                              be distracted by the readable content of a 
-                              page when looking at its layout
-                           </p>
-                           <p><a class="btn btn-lg btn-primary" href="#">Get Started</a></p>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-                  <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
                   </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
                   </button>
+                </div>
                </div>
 <!-- Carousel Or Header Part  End  -->
       </header>
